--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,17 @@
+APScheduler==3.6.3
 asgiref==3.5.2
 certifi==2022.12.7
 charset-normalizer==2.1.1
 coreapi==2.3.3
 coreschema==0.0.4
 Django==4.1.4
+django-apscheduler==0.6.2
 django-filter==22.1
 djangorestframework==3.14.0
 djangorestframework-jsonapi==6.0.0
 drf-yasg==1.21.4
 drf-yasg-json-api==0.9.1
+feedparser==6.0.10
 idna==3.4
 inflection==0.5.1
 itypes==1.2.0
@@ -17,10 +20,16 @@ MarkupSafe==2.1.1
 packaging==22.0
 Pillow==9.3.0
 psycopg2-binary==2.9.5
+python-dateutil==2.8.2
 pytz==2022.6
+pytz-deprecation-shim==0.1.0.post0
 requests==2.28.1
 ruamel.yaml==0.17.21
 ruamel.yaml.clib==0.2.7
+sgmllib3k==1.0.0
+six==1.16.0
 sqlparse==0.4.3
+tzdata==2022.7
+tzlocal==4.2
 uritemplate==4.1.1
 urllib3==1.26.13
